--- a/2014-03-21/index.html
+++ b/2014-03-21/index.html
@@ -12,6 +12,9 @@
 		"http://en.wikipedia.org/wiki/File:Matsumoto_Castle05s5s4592.jpg"
 		"http://web.njit.edu/~kevin/rgb.txt.html"> </a>
 		
-	<h2>Exercises: </h2>
+	<h2>Exercises: https://github.com/cvdlab-cg/477229/blob/master/2014-03-21/python/Exercise1.py
+			https://github.com/cvdlab-cg/477229/blob/master/2014-03-21/python/Exercise2.py
+			https://github.com/cvdlab-cg/477229/blob/master/2014-03-21/python/Exercise3.py
+	</h2>
 	</body>
 </html>	
