--- a/2014-05-17/index.html
+++ b/2014-05-17/index.html
@@ -7,11 +7,18 @@
 <h2>Ferraro Marco</h2>
 <h3>477229</h3>
 <p>Immagini:</p>
-<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-04-11/images/Immagine.jpg">Immagine</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/images/Blocco1Dettagli.jpg">Immagine1</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/images/Blocco1MuriPieni.jpg">Immagine2</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/images/Blocco2Dettagli.jpg">Immagine3</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/images/Blocco2MuriPieni.jpg">Immagine4</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/images/Blocco3Dettagli.jpg">Immagine5</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/images/Blocco3MuriPieni.jpg">Immagine6</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/images/RisultatoFinale1.jpg">Immagine7</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/images/RisultatoFinale2.jpg">Immagine8</a>
 <p>Esercizi:</p>
-<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-04-11/python/Exercise1.py">Esercizio1</a>
-<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-04-11/python/Exercise2.py">Esercizio2</a>
-<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-04-11/python/Exercise3.py">Esercizio3</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/python/Exercise1.py">Esercizio1</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/python/Exercise2.py">Esercizio2</a>
+<a href="https://github.com/cvdlab-cg/477229/blob/master/2014-05-17/python/Exercise3.py">Esercizio3</a>
 <p>Descrizione:</p>
 Rappresentazione di un'abitazione di 65 mq comprensiva di finestre,porte,mura con relative decomposizioni\n
 in celle. L'ambiente è diviso in 3 blocchi che sono stati dettagliati separatamente e uniti alla fine, come\n
